--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
 <body>
     <header>
         <nav class="mainMenu">
-            <a href="/Reto1/index.html">
+            <a href="index.html">
                 <button type="button">Home</button>
+            </a>
+            <a href="perfil.html">
+                <button type="button">Sobre mi</button>
+            </a>
+            <a href="contacto.html">
+                <button type="button">Contacto</button>
             </a>
         </nav>
         <ul class="breadcrumbs">
