Mejorando estilos de la home y añadiendo contenido

--- a/index.html
+++ b/index.html
@@ -9,34 +9,38 @@
 <body>
     <header>
         <nav class="mainMenu">
-            <a href="index.html">
-                <button type="button">Home</button>
-            </a>
-            <a href="perfil.html">
-                <button type="button">Sobre mi</button>
-            </a>
-            <a href="contacto.html">
-                <button type="button">Contacto</button>
-            </a>
+            <a href="index.html" target="_blank">Home</a>
+            <a href="perfil.html" target="_blank">Sobre mi</a>
+            <a href="contacto.html" target="_blank">Contacto</a>
         </nav>
         <ul class="breadcrumbs">
             <li>Home</li>
         </ul>
     </header>
     <main>
-
-    </main>
-    <aside>
-
-    </aside>
+        <aside>
+            <h2>Diego Suárez</h2>
+            <h3>Junior Developer</h3>
+            <img src="img/yo.jpg" alt="Foto de Diego Suárez">
+        </aside>
+        <article>
+            <h2>Estrenando mi nuevo espacio personal</h2>
+            <p>¡Bienvenido a mi nuevo espacio personal! En el podrás encontrar información sobre mi vida profesional: experiencia, formación, planes de futuro, etc.  </p>
+            <p>Espero que haya gustado y encuentres lo que buscas. Si no es así, ¡no dudes en <a href="contacto.html">pedírmelo</a>!</p>
+        </article>
+        <article>
+            <h2>¿En qué ando metido ahora mismo?</h2>
+            <p>Actualmente estoy realizando el bootcamp online de Frontend con React que imparte <a href="https://geekshubsacademy.com/">GeeksHubsAcademy</a> para afianzar mis conocimientos en HTML5 y CSS3, además de añadir a mi <span>toolbelt</span> uno de los frameworks de JavaScript más populares y demandados en el mercado laboral.</p>
+            <img src="" alt="">
+            <p>¿Quieres saber más? ¡Echa un vistazo a mi sección de <a href="http://">formación</a>!</p>
+        </article>
+    </main>    
     <footer>
-        <p>Diego Suárez León</p>
-        <a href="https://github.com/diegosuarez-dev" target="_blank">
-            <img src="img/github.png" alt="Logo Github">
-        </a>
-        <a href="https://www.linkedin.com/in/diegosuarezleon/" target="_blank">
-            <img src="img/linkedin.png" alt="Logo Linkedin">
-        </a>
+        <p>Encuéntrame también en:</p>
+        <div class="enlacesRedes">
+            <a href="https://github.com/diegosuarez-dev" target="_blank"><img src="img/github.png" alt="Logo Github"></a>
+            <a href="https://www.linkedin.com/in/diegosuarezleon/" target="_blank"><img src="img/linkedin.png" alt="Logo Linkedin"></a>
+        </div>
     </footer>
 </body>
 </html>
