Finalizada la home. Iniciando estructura y contenidos de perfil

--- a/perfil.html
+++ b/perfil.html
@@ -3,9 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/stylesPerfil.css" type="text/css">
+    <title>Sobre mi</title>
 </head>
 <body>
-    
+    <header>
+        <nav class="mainMenu">
+            <a href="index.html" target="_blank">Home</a>
+            <a href="perfil.html" target="_blank">Sobre mi</a>
+            <a href="porfolio.html" target="_blank">Porfolio</a>
+            <a href="contacto.html" target="_blank">Contacto</a>
+        </nav>
+        <ul class="breadcrumbs">
+            <li><a href="index.html" target="_blank">Home</a></li>
+            <li>Sobre mi</li>
+        </ul>
+    </header>
+    <main>
+        <article>
+            <h2>Formación</h2>
+            <h3>Técnico Superior en Desarrollo de Aplicaciones Multiplataforma</h3>
+            <p>Estudios finalizados en 2020 y realizados en el I.E.S. El Rincón en Las Palmas de Gran Canaria. Nota media del ciclo: 8'7.</p>
+            <h3>Bootcamp online de Frontend con React <span>- cursando en la actualidad -</span></h3>
+            <p>Realizándolo con GeeksHubsAcademy.</p>
+            <h3>The Complete 2020 Flutter Developmend Bootcamp with Dart <span>- cursando en la actualidad -</span></h3>
+            <p>Bootcamp que estoy actualmente realizando a través de la plataforma de Udemy. Impartido por Angela Yu, de The App Brewery.</p>
+            <h3>Curso de HTML5 y CSS3</h3>
+            <p>Realizado de forma online en la plataforma Open Webinars.</p>
+            <h3>Curso de Javascript Profesional</h3>
+            <p>Realizado de forma online en la plataforma Open Webinars.</p>
+            <h3>Curso de programación asíncrona con promises en Javascript</h3>
+            <p>Realizado de forma online en la plataforma Open Webinars.</p>
+            <h3>Curso Dart & Introducción a Flutter</h3>
+            <p>Realizado de forma online en la plataforma Udemy.</p>
+            <h3>Curso de Javascript</h3>
+            <p>Realizado de forma online en la plataforma Sololearn</p>
+            <h3>Curso de desarrollo con Java</h3>
+            <p>Realizado de forma online con la Academia Postal 3 Vigo.</p>
+        </article>
+        <article>
+            <h2>Experiencia</h2>
+            <h3>QA Tester en Destinia.com</h3>
+            <p>Es mi puesto de trabajo actual y me encargo del testeo de desarrollos frontend y backend para el portal de Destinia, así como otras herramientas y webs que gestiona el grupo. Entre las tareas que realizo destacan la gestión de bases de datos en entornos virtuales, testeo de APIs utilizando Postman, revisión de maquetación y automatización de tests mediante el framework Cypress de Javascript.</p>
+        </article>
+    </main>
+    <footer>
+        <p>Encuéntrame también en:</p>
+        <div class="enlacesRedes">
+            <a href="https://github.com/diegosuarez-dev" target="_blank"><img src="img/github.png"
+                    alt="Logo Github"></a>
+            <a href="https://www.linkedin.com/in/diegosuarezleon/" target="_blank"><img src="img/linkedin.png"
+                    alt="Logo Linkedin"></a>
+        </div>
+    </footer>
 </body>
 </html>
