--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
     <title>Mi espacio personal</title>
 </head>
+
 <body>
     <header>
         <nav class="mainMenu">
             <a href="index.html" target="_blank">Home</a>
             <a href="perfil.html" target="_blank">Sobre mi</a>
+            <a href="porfolio.html" target="_blank">Porfolio</a>
             <a href="contacto.html" target="_blank">Contacto</a>
         </nav>
         <ul class="breadcrumbs">
@@ -20,27 +23,42 @@
     <main>
         <aside>
             <h2>Diego Suárez</h2>
-            <h3>Junior Developer</h3>
+            <h4>Junior Developer</h4>
             <img src="img/yo.jpg" alt="Foto de Diego Suárez">
         </aside>
         <article>
-            <h2>Estrenando mi nuevo espacio personal</h2>
-            <p>¡Bienvenido a mi nuevo espacio personal! En el podrás encontrar información sobre mi vida profesional: experiencia, formación, planes de futuro, etc.  </p>
-            <p>Espero que haya gustado y encuentres lo que buscas. Si no es así, ¡no dudes en <a href="contacto.html">pedírmelo</a>!</p>
+            <h2>¡Estoy de inauguración!</h2>
+            <p>¡Bienvenido a mi nuevo espacio personal! En el podrás encontrar información sobre mi vida profesional: experiencia, formación, planes de futuro, etc. </p>
+            <img id="opening" src="img/opening.png" alt="Imagen de inauguración">
+            <p>Espero que te guste y encuentres lo que buscas. Si no es así, ¡no dudes en <a
+                    href="contacto.html">contactar conmigo</a>!</p>
         </article>
         <article>
             <h2>¿En qué ando metido ahora mismo?</h2>
-            <p>Actualmente estoy realizando el bootcamp online de Frontend con React que imparte <a href="https://geekshubsacademy.com/">GeeksHubsAcademy</a> para afianzar mis conocimientos en HTML5 y CSS3, además de añadir a mi <span>toolbelt</span> uno de los frameworks de JavaScript más populares y demandados en el mercado laboral.</p>
-            <img src="" alt="">
+            <p>Actualmente estoy realizando el bootcamp online de Frontend con React que imparte <a
+                    href="https://geekshubsacademy.com/">GeeksHubsAcademy</a> para afianzar mis conocimientos en HTML5 y
+                CSS3, además de añadir a mi <span>toolbelt</span> uno de los frameworks de JavaScript más populares y
+                demandados en el mercado laboral.</p>
+            <div class="techLogos">
+                <img src="img/010-github.png" alt="Logo de Github">
+                <img src="img/030-html-5.png" alt="Logo de HTML5">
+                <img src="img/031-css.png" alt="Logo de CSS3">
+                <img src="img/029-javascript.png" alt="Logo de Javascript">
+                <img src="img/006-react.png" alt="Logo de React">
+                <img src="img/032-nodejs.png" alt="Logo de Node JS">
+            </div>
             <p>¿Quieres saber más? ¡Echa un vistazo a mi sección de <a href="http://">formación</a>!</p>
         </article>
-    </main>    
+    </main>
     <footer>
         <p>Encuéntrame también en:</p>
         <div class="enlacesRedes">
-            <a href="https://github.com/diegosuarez-dev" target="_blank"><img src="img/github.png" alt="Logo Github"></a>
-            <a href="https://www.linkedin.com/in/diegosuarezleon/" target="_blank"><img src="img/linkedin.png" alt="Logo Linkedin"></a>
+            <a href="https://github.com/diegosuarez-dev" target="_blank"><img src="img/github.png"
+                    alt="Logo Github"></a>
+            <a href="https://www.linkedin.com/in/diegosuarezleon/" target="_blank"><img src="img/linkedin.png"
+                    alt="Logo Linkedin"></a>
         </div>
     </footer>
 </body>
+
 </html>
