Finalizada sección porfolio

--- a/perfil.html
+++ b/perfil.html
@@ -11,20 +11,20 @@
 <body>
     <header>
         <nav class="mainMenu">
-            <a href="index.html" target="_blank">Home</a>
+            <a href="index.html" target="_self">Home</a>
             <a href="perfil.html" target="_blank">Sobre mi</a>
             <a href="porfolio.html" target="_blank">Porfolio</a>
             <a href="contacto.html" target="_blank">Contacto</a>
         </nav>
         <ul class="breadcrumbs">
-            <li><a href="index.html" target="_blank">Home</a></li>
+            <li><a href="index.html" target="_self">Home</a></li>
             <li>Sobre mi</li>
         </ul>
     </header>
     <main>
         <article id="art1">
             <header>
-                <h2>Formación</h2>
+                <h2>Formación en programación</h2>
             </header>
             <section>
                 <h3>Técnico Superior en Desarrollo de Aplicaciones Multiplataforma</h3>
@@ -68,7 +68,7 @@
         </article>
         <article id="art2">
             <header>
-                <h2>Experiencia</h2>
+                <h2>Experiencia relacionada</h2>
             </header>
             <section>
                 <h3>QA Tester en Destinia.com</h3>
