--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav class="mainMenu">
-            <a href="index.html" target="_blank">Home</a>
+            <a href="index.html" target="_self">Home</a>
             <a href="perfil.html" target="_blank">Sobre mi</a>
             <a href="porfolio.html" target="_blank">Porfolio</a>
             <a href="contacto.html" target="_blank">Contacto</a>
