--- a/thankyoupage.html
+++ b/thankyoupage.html
@@ -7,8 +7,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/stylesContacto.css" type="text/css">
-    <title>Contacto</title>
+    <link rel="stylesheet" href="css/stylesthanks.css" type="text/css">
+    <title>Consulta enviada con éxito</title>
 </head>
 
 <body>
@@ -38,50 +38,10 @@
     <main>
         <div class="container-fluid">
             <div class="row justify-content-center">
-                <div class="col-12 col-sm-6">
-                    <h4>¿Tienes alguna pregunta?</h4>
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-12 col-sm-6">
-                    <form action="thankyoupage.html" method="POST">
-                        <div class="form-group">
-                            <label for="inputName">Nombre</label>
-                            <input type="text" class="form-control" id="inputName" placeholder="Ej. Diego Suárez">
-                        </div>
-                        <div class="form-group">
-                            <label for="inputEmail">Email</label>
-                            <input type="email" class="form-control" id="inputEmail" placeholder="name@example.com">
-                        </div>
-                        <div class="form-group">
-                            <label for="textarea">Describe tu consulta</label>
-                            <textarea class="form-control" id="textarea" rows="3"></textarea>
-                        </div>
-                        <label for="Radios1">Tipo de consulta</label>
-                        <div class="form-check">
-                            <input class="form-check-input" type="radio" name="Radios" id="Radios1"
-                                value="option1" checked>
-                            <label class="form-check-label" for="Radios1">
-                                Oferta de trabajo / colaboración
-                            </label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="radio" name="Radios" id="Radios2"
-                                value="option2">
-                            <label class="form-check-label" for="Radios2">
-                                Problema en la web
-                            </label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="radio" name="Radios" id="Radios3"
-                                value="option3">
-                            <label class="form-check-label" for="Radios3">
-                                Otra consulta
-                            </label>
-                        </div>
-                        <br>
-                        <button type="submit" class="btn btn-outline-success">Enviar</button>
-                    </form>
+                <div class="col-8 col-sm-4 my-5 mx-5 py-5 px-5 border border-success rounded">
+                    <h6>Tu mensaje se ha enviado con éxito.</h6>
+                    <p>Recibiras una respuesta a la mayor brevedad.</p>
+                    <h5>¡Muchas gracias!</h5>
                 </div>
             </div>
         </div>
