--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <header>
         <nav class="mainMenu">
-            <a href="index.html" target="_self">Home</a>
-            <a href="perfil.html" target="_blank">Sobre mi</a>
-            <a href="porfolio.html" target="_blank">Porfolio</a>
-            <a href="contacto.html" target="_blank">Contacto</a>
+            <a href="index.html">Home</a>
+            <a href="perfil.html">Sobre mi</a>
+            <a href="porfolio.html">Porfolio</a>
+            <a href="contacto.html">Contacto</a>
         </nav>
         <ul class="breadcrumbs">
             <li>Home</li>
