Revisión de indentado

--- a/index.html
+++ b/index.html
@@ -35,10 +35,7 @@
         </article>
         <article>
             <h2>¿En qué ando metido ahora mismo?</h2>
-            <p>Actualmente estoy realizando el bootcamp online de Frontend con React que imparte <a
-                    href="https://geekshubsacademy.com/">GeeksHubsAcademy</a> para afianzar mis conocimientos en HTML5 y
-                CSS3, además de añadir a mi <span>toolbelt</span> uno de los frameworks de JavaScript más populares y
-                demandados en el mercado laboral.</p>
+            <p>Actualmente estoy realizando el bootcamp online de Frontend con React que imparte <a href="https://geekshubsacademy.com/">GeeksHubsAcademy</a> para afianzar mis conocimientos en HTML5 y CSS3, además de añadir a mi <span>toolbelt</span> uno de los frameworks de JavaScript más populares y demandados en el mercado laboral.</p>
             <div class="techLogos">
                 <img src="img/010-github.png" alt="Logo de Github">
                 <img src="img/030-html-5.png" alt="Logo de HTML5">
