--- a/perfil.html
+++ b/perfil.html
@@ -72,10 +72,7 @@
             </header>
             <section>
                 <h3>QA Tester en Destinia.com</h3>
-            <p>Es mi puesto de trabajo actual y me encargo del testeo de desarrollos frontend y backend para el portal
-                de Destinia, así como otras herramientas y webs que gestiona el grupo. Entre las tareas que realizo
-                destacan la gestión de bases de datos en entornos virtuales, testeo de APIs utilizando Postman, revisión
-                de maquetación y automatización de tests mediante el framework Cypress de Javascript.</p>
+            <p>Es mi puesto de trabajo actual y me encargo del testeo de desarrollos frontend y backend para el portal de Destinia, así como otras herramientas y webs que gestiona el grupo. Entre las tareas que realizo destacan la gestión de bases de datos en entornos virtuales, testeo de APIs utilizando Postman, revisión de maquetación y automatización de tests mediante el framework Cypress de Javascript.</p>
             </section>            
         </article>
     </main>
@@ -89,5 +86,4 @@
         </div>
     </footer>
 </body>
-
 </html>
